--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "biome check .",
+    "format": "biome check --apply .",
+    "format:force": "biome check --apply-unsafe ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@biomejs/biome": "1.7.0",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
