--- a/package.json
+++ b/package.json
@@ -21,21 +21,33 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "~50.0.14",
+    "expo-blur": "~12.9.2",
+    "expo-camera": "~14.1.3",
+    "expo-constants": "~15.4.6",
+    "expo-crypto": "~12.8.1",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
+    "expo-notifications": "~0.27.7",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "nativewind": "^2.0.11",
+    "pretty-bytes": "^6.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-qrcode-styled": "^0.3.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "tailwind-merge": "^2.2.2"
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.2.2",
+    "ts-pattern": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
